<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btnbck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginLeft="161dp"
            android:contentDescription="Back"
            android:onClick="BackApp"
            android:text="Back"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnDel"
            android:layout_width="36dp"
            android:layout_height="31dp"
            android:src="@drawable/delete" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/desc_app_logo"
            android:src="@drawable/logobc" />

        <TextView
            android:id="@+id/tvAudioName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_audio_name"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvAudioPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_audio_position"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBarAudio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvAudioDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_audio_duration"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnPrevious"
                style="@style/Widget.AppCompat.ActionButton.CloseMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_btn_prev"
                android:src="@drawable/ic_skip_previous" />

            <ImageButton
                android:id="@+id/btnPlay"
                style="@style/Widget.AppCompat.ActionButton.CloseMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_btn_play"
                android:src="@drawable/ic_play_arrow" />

            <ImageButton
                android:id="@+id/btnPause"
                style="@style/Widget.AppCompat.ActionButton.CloseMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_btn_pause"
                android:src="@drawable/ic_pause"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btnStop"
                style="@style/Widget.AppCompat.ActionButton.CloseMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_btn_stop"
                android:src="@drawable/ic_stop" />

            <ImageButton
                android:id="@+id/btnNext"
                style="@style/Widget.AppCompat.ActionButton.CloseMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_btn_next"
                android:src="@drawable/ic_skip_next" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/mnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:gravity="bottom"
        android:text="Cindy Nurhabibah"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>